# wootype

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PERFORMANCE_REPORT.md  README.md  README_CN.md  SALSA_PERFORMANCE_COMPARISON.md  TEST_REPORT.md  build.rs
.github/workflows/: release.yml
benches/: incremental_benchmark.rs  query_benchmark.rs  salsa_comparison.rs  salsa_full_benchmark.rs
docs/: FEATURES_3_ENHANCEMENTS.md  PHASE2_SERVICIFICATION.md  PHASE3_SEMANTIC_OS.md  SALSA_IMPLEMENTATION.md  WOOF_ECOSYSTEM.md
examples/: basic_usage.rs  grpc_client.rs  modules_navigation_incremental.rs  performance_test.rs  websocket_client.rs
proto/: wootype.proto
src/: lib.rs  main.rs
src/agent/: branch.rs  coordinator.rs  mod.rs  rag.rs  session.rs
src/api/: grpc.rs  mod.rs  server.rs  service.rs  websocket.rs
src/bridge/: ipc.rs  mod.rs  protocol.rs  shim.rs
src/core/: entity.rs  gomod.rs  gomod_resolver.rs  method.rs  mod.rs  serde_impl.rs  storage.rs  symbol.rs  types.rs  universe.rs  xpackage.rs
src/daemon/: mod.rs
src/parser/: ast.rs  converter.rs  importer.rs  mod.rs
src/query/: cache.rs  engine.rs  mod.rs  pattern.rs
src/salsa/: db.rs  inputs.rs  lsp.rs  mod.rs
src/salsa_full/: database.rs  diagnostics.rs  gradual.rs  incremental.rs  inputs.rs  lsp_optimized.rs  metrics.rs  mod.rs  on_demand.rs  queries.rs
src/semantic/: checks.rs  mod.rs  operations.rs  queries.rs
src/validate/: checker.rs  concurrent.rs  error.rs  infer.rs  mod.rs  stream.rs
tests/: core_test.rs  integration_test.rs  method_set_test.rs  modules_navigation_test.rs  salsa_test.rs
