[package]
name = "wooftype"
version = "0.1.0"
edition = "2021"
authors = ["Wooftype Team"]
description = "Type System as a Service - Rust-powered Go type checker for AI Agents"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }

# Concurrent data structures
dashmap = "5.5"
scc = "2.0"
parking_lot = "0.12"

# Immutable data structures for type environments
im = "15.1"

# gRPC for AI Agent API
tonic = "0.10"
prost = "0.12"
tower = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Rope data structure for zero-copy AST
ropey = "1.6"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IPC and shared memory
interprocess = "1.2"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
bitflags = "2.4"
indexmap = "2.1"
arc-swap = "1.6"
crossbeam = "0.8"
rayon = "1.8"
bincode = "1.3"
regex = "1.10"
dirs = "5.0"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }

# SIMD support (nightly feature, fallback for stable)
# stdsimd = { optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }



[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
