[package]
name = "wootype"
version = "0.1.0"
edition = "2021"
authors = ["Wootype Team"]
description = "Blazing-fast Go type system service —— Vibe Coding toolchain"
license = "MIT"
repository = "https://github.com/wootype/wootype"
homepage = "https://github.com/wootype/wootype"
documentation = "https://docs.rs/wootype"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "fs", "process"] }

# Concurrent data structures
dashmap = "5.5"
scc = "2.0"
parking_lot = "0.12"

# Immutable data structures for type environments
im = "15.1"

# gRPC for AI Agent API
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tower = "0.5"
tonic-reflection = "0.12"

# WebSocket
tokio-tungstenite = "0.24"
axum = { version = "0.7", default-features = false, features = ["ws", "tokio", "http1", "json"] }
tower-http = { version = "0.6", default-features = false, features = ["cors"] }
futures-util = "0.3"
tokio-stream = "0.1"

# HTTP
hyper = { version = "1.0", default-features = false, features = ["server", "http1", "http2"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Rope data structure for zero-copy AST
ropey = "1.6"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
ariadne = "0.5"  # Beautiful error messages

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IPC and shared memory
interprocess = "1.2"

# Incremental computation - Full Salsa framework
salsa = "0.26"

# Utilities
uuid = { version = "1.6", default-features = false, features = ["v4", "serde", "rng"] }
bitflags = "2.4"
indexmap = "2.1"
arc-swap = "1.6"
crossbeam = "0.8"
rayon = "1.8"
rand = "0.8"
bincode = "1.3"
regex = { version = "1.10", default-features = false, features = ["std", "unicode-perl"] }
dirs = "5.0"
clap = { version = "4.4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }

# LSP
lsp-types = "0.95"
tower-lsp = "0.20"

# SIMD support (nightly feature, fallback for stable)
# stdsimd = { optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.1"

[[bin]]
name = "wootype-daemon"
path = "src/bin/daemon.rs"

[[bench]]
name = "query_benchmark"
harness = false

[[bench]]
name = "incremental_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
